# lovely-injector

./: README.md
crates/lovely-lib/: Cargo.toml  build.rs
crates/lovely-lib/src/: lib.rs
crates/lovely-lib/src/patch/: copy.rs  mod.rs  pattern.rs  regex.rs  vars.rs
