[package]
name = "lovely-lib"
version = "0.8.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[dependencies]
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
dirs = "5.0.1"
toml = "0.8.10"
serde = { version = "1.0.197", features = ["derive"] }
walkdir = "2.5.0"
wildmatch = "2.3.0"
regex-cursor = "0.1.4"
regex-lite = "0.1.5"
chrono = "0.4.38"
serde_ignored = "0.1.10"
itertools = "0.13.0"
crop = "0.4.2"
